--- a/testOCR/Form1.resx
+++ b/testOCR/Form1.resx
@@ -138,25 +138,101 @@
   <metadata name="colLink.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="colCheck.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Code.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="colCompany.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="colContact.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="colEmail.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="colFiles.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="colLink.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAICAAAAAAAACoCAAAJgAAACAgAAAAAAAAqAwAAM4IAAAoAAAAIAAAAEAAAAABAAgAAAAAAIAE
+        AAAAAAAAAAAAAAABAAAAAAAA1P/wALH/4gCO/9QAa//GAEj/uAAl/6oAAP+qAAC5egAAlmIASQDcAABQ
+        MgAyMjIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA////AP7+DAwMDAwMDAwM/v7+/v4MDAwMDAwMDAz+/v7+/v7+/v7+DAwM
+        DAwMDP7+/v7+/v4MDAwMDAwM/v7+/v7+/v7+/v7+/v4MDAz+/v7+/v7+/v4MDAz+/v7+/v7+/v7+/v7+
+        /v7+/v4MDP7+/v7+/v7+/gwMDAwMDAwMDAz+/v7+/v7+/v7+/gwMDAwMDAwMDAwMDAwGBgYGBgYMBwwM
+        /v4MDAwMDAwMAwMDAwMDAwMEBAQEBAUGBgYGBgwHCAoM/gwCAgICAgIDAwMMDAwMDAwMDAwEBAUGBgYG
+        DAcICgz+DAICAgICAgIMDAMDAwMDAwMEBAwMBQUGBgYMBwgKDP4MAgICAgIMDAIDAwMDAwMDAwMEBAQM
+        DAUGBgwHCAoM/gwCAgIMDAICAgIDAwMHBwMDAwMEBAQEDAwGBgwHCgz+DAICAgICAgICAgIDAwkJBwMD
+        AwMEBAQEBAQGDAcKDP7+DAICAgICAgICAgIDCQkHAwMDAwMEBAQEBAQMBwoM/v4MAgICAgICAgIHBwcJ
+        CQcHBwMDAwMEBAQEBAwHCgz+/gwCAgICAgICAgkJCQkJCQkJBwMDAwMEBAQEDAcKDP7+DAICAgICAgIC
+        CQkJCQkJCQkHAwMDAwMEBAQMBwoM/v4MAgICAgICAgIHBwcHBwcHBwMDAwMDAwMEBAwHCgz+/gwCAgIC
+        AgICAgkJCQkJCQkJBwMDAwMDAwMEDAcIDP7+DAECAgICAgICCQkJCQkJCQkHAwMDAwMDAwMMBwgKDP4M
+        AQECAgICAgICAgICAgICAgIDAwMDAwMDAwwHCAoM/gwBAQECAgICAgICAgICAgICAgIDAwMDAwMDDAcI
+        Cgz+DAEBDAwCAgICAgwMAgIMDAICAgIDDAwDAwMMBwgKDP4MAQEBAQwMDAwMAgICAgICDAwMDAwDAwMD
+        AwMMCAoM/gwAAQEBAQECAgICAgICAgICAgICAgIDAwMDAwwICgz+/gwAAQEBAQECAgILAgILAgICAgIC
+        AgILAwMDDAgKDP7+DAALCwEBAQsCCwICAgILAgILCwICCwILCwMMCAoMC/4MAAsACwELAQsLAgICAgIL
+        CwICCwsCAgIECwsICwz+CwsLAAAACwEBAQECAgICAgICAgICAgICAgIEDAsKDP7+CwAAAAAAAQEBAQEC
+        AgICAgICAgIMDAwMDAwMCAoM/v4MAAAAAAAAAQwMDAwMDAwMDAwMDAICAgYGBgYMDAz+/gwMDAwMDAwM
+        AgICAgICAgICAgICAgICAgwMDAwMDP7+/v7+DAwAAAAAAAACDAwMDAwMDAwMDAwM/v7+/v7+/v7+/v7+
+        /gwMDAwMDAz+/v7+/v7+/v7+/v7+/v7+/v7AHwB/4D+A//x/x//+f8AP/gAAAwAAAAEAAAABAAAAAQAA
+        AAEAAAABAAAAAYAAAAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAACAAAAAgAAAAIAAAACAAAAAgAAAAMAA
+        AADAAAAAQAAAAIAAAADAAAAAwAAAAMAAAAD4AAA//gP//ygAAAAgAAAAQAAAAAEAGAAAAAAAgAwAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/6oA/6oA/6oA/6oA/6oA/6oAAAAA
+        uXoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABr/8Zr/8Zr/8Zr/8Zr/8Zr/8Zr/8Zr/8ZI
+        /7hI/7hI/7hI/7hI/7gl/6oA/6oA/6oA/6oA/6oA/6oAAAAAuXoAlmIAUDIAAAAAAAAAAACO/9SO/9SO
+        /9SO/9SO/9SO/9Rr/8Zr/8Zr/8YAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABI/7hI/7gl/6oA/6oA
+        /6oA/6oA/6oAAAAAuXoAlmIAUDIAAAAAAAAAAACO/9SO/9SO/9SO/9SO/9SO/9SO/9QAAAAAAABr/8Zr
+        /8Zr/8Zr/8Zr/8Zr/8Zr/8ZI/7hI/7gAAAAAAAAl/6ol/6oA/6oA/6oA/6oAAAAAuXoAlmIAUDIAAAAA
+        AAAAAACO/9SO/9SO/9SO/9SO/9QAAAAAAACO/9Rr/8Zr/8Zr/8Zr/8Zr/8Zr/8Zr/8Zr/8Zr/8ZI/7hI
+        /7hI/7gAAAAAAAAl/6oA/6oA/6oAAAAAuXoAlmIAUDIAAAAAAAAAAACO/9SO/9SO/9QAAAAAAACO/9SO
+        /9SO/9SO/9Rr/8Zr/8Zr/8YAuXoAuXpr/8Zr/8Zr/8Zr/8ZI/7hI/7hI/7hI/7gAAAAAAAAA/6oA/6oA
+        AAAAuXoAUDIAAAAAAAAAAACO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9Rr/8Zr/8ZJANxJANwA
+        uXpr/8Zr/8Zr/8Zr/8ZI/7hI/7hI/7hI/7hI/7hI/7gA/6oAAAAAuXoAUDIAAAAAAAAAAAAAAACO/9SO
+        /9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9Rr/8ZJANxJANwAuXpr/8Zr/8Zr/8Zr/8Zr/8ZI/7hI/7hI
+        /7hI/7hI/7hI/7gAAAAAuXoAUDIAAAAAAAAAAAAAAACO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9QAuXoA
+        uXoAuXpJANxJANwAuXoAuXoAuXpr/8Zr/8Zr/8Zr/8ZI/7hI/7hI/7hI/7hI/7gAAAAAuXoAUDIAAAAA
+        AAAAAAAAAACO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9RJANxJANxJANxJANxJANxJANxJANxJANwAuXpr
+        /8Zr/8Zr/8Zr/8ZI/7hI/7hI/7hI/7gAAAAAuXoAUDIAAAAAAAAAAAAAAACO/9SO/9SO/9SO/9SO/9SO
+        /9SO/9SO/9RJANxJANxJANxJANxJANxJANxJANxJANwAuXpr/8Zr/8Zr/8Zr/8Zr/8ZI/7hI/7hI/7gA
+        AAAAuXoAUDIAAAAAAAAAAAAAAACO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9QAuXoAuXoAuXoAuXoAuXoA
+        uXoAuXoAuXpr/8Zr/8Zr/8Zr/8Zr/8Zr/8Zr/8ZI/7hI/7gAAAAAuXoAUDIAAAAAAAAAAAAAAACO/9SO
+        /9SO/9SO/9SO/9SO/9SO/9SO/9RJANxJANxJANxJANxJANxJANxJANxJANwAuXpr/8Zr/8Zr/8Zr/8Zr
+        /8Zr/8Zr/8ZI/7gAAAAAuXoAlmIAAAAAAAAAAAAAAACx/+KO/9SO/9SO/9SO/9SO/9SO/9SO/9RJANxJ
+        ANxJANxJANxJANxJANxJANxJANwAuXpr/8Zr/8Zr/8Zr/8Zr/8Zr/8Zr/8Zr/8YAAAAAuXoAlmIAUDIA
+        AAAAAAAAAACx/+Kx/+KO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9Rr
+        /8Zr/8Zr/8Zr/8Zr/8Zr/8Zr/8Zr/8YAAAAAuXoAlmIAUDIAAAAAAAAAAACx/+Kx/+Kx/+KO/9SO/9SO
+        /9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9Rr/8Zr/8Zr/8Zr/8Zr/8Zr/8Zr/8YA
+        AAAAuXoAlmIAUDIAAAAAAAAAAACx/+Kx/+IAAAAAAACO/9SO/9SO/9SO/9SO/9QAAAAAAACO/9SO/9QA
+        AAAAAACO/9SO/9SO/9SO/9Rr/8YAAAAAAABr/8Zr/8Zr/8YAAAAAuXoAlmIAUDIAAAAAAAAAAACx/+Kx
+        /+Kx/+Kx/+IAAAAAAAAAAAAAAAAAAACO/9SO/9SO/9SO/9SO/9SO/9QAAAAAAAAAAAAAAAAAAABr/8Zr
+        /8Zr/8Zr/8Zr/8Zr/8YAAAAAlmIAUDIAAAAAAAAAAADU//Cx/+Kx/+Kx/+Kx/+Kx/+KO/9SO/9SO/9SO
+        /9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9Rr/8Zr/8Zr/8Zr/8Zr/8YAAAAAlmIAUDIA
+        AAAAAAAAAAAAAADU//Cx/+Kx/+Kx/+Kx/+Kx/+KO/9SO/9SO/9QyMjKO/9SO/9QyMjKO/9SO/9SO/9SO
+        /9SO/9SO/9SO/9SO/9QyMjJr/8Zr/8Zr/8YAAAAAlmIAUDIAAAAAAAAAAAAAAADU//AyMjIyMjKx/+Kx
+        /+Kx/+IyMjKO/9QyMjKO/9SO/9SO/9SO/9QyMjKO/9SO/9QyMjIyMjKO/9SO/9QyMjKO/9QyMjIyMjJr
+        /8YAAAAAlmIAUDIAAAAyMjIAAAAAAADU//AyMjLU//AyMjKx/+IyMjKx/+IyMjIyMjKO/9SO/9SO/9SO
+        /9SO/9QyMjIyMjKO/9SO/9QyMjIyMjKO/9SO/9SO/9RI/7gyMjIyMjIAlmIyMjIAAAAAAAAyMjIyMjIy
+        MjLU//DU//DU//AyMjKx/+Kx/+Kx/+Kx/+KO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO
+        /9SO/9SO/9SO/9RI/7gAAAAyMjIAUDIAAAAAAAAAAAAyMjLU//DU//DU//DU//DU//Cx/+Kx/+Kx/+Kx
+        /+Kx/+KO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlmIAUDIA
+        AAAAAAAAAAAAAADU//DU//DU//DU//DU//DU//Cx/+IAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAACO/9SO/9SO/9QA/6oA/6oA/6oA/6oAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAACO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9SO/9QAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADU//DU//DU//DU//DU//DU//CO/9QAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAHwB/4D+A//x/x//+f8AP/gAAAwAAAAEAAAABAAAAAQAA
+        AAEAAAABAAAAAYAAAAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAACAAAAAgAAAAIAAAACAAAAAgAAAAMAA
+        AADAAAAAQAAAAIAAAADAAAAAwAAAAMAAAAD4AAA//gP//w==
+</value>
+  </data>
 </root>
